--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     </div>
 
                     <div class="arFrame">
-                         <img class="arFrameFoto" src=".fotoForProject/arFoto.png" alt="фото">
+                         <img class="arFrameFoto" src="fotoForProject/arFoto.png" alt="фото">
                          <div class="modernTecHead">
                             <p class="modernTecHeadSmallText modernTecHeadHeaderEm arFrameSmallText" id="5Reason1">5 причин выбрать нас</p>
                             <header class="modernTecHeadHeader modernTecHeadHeaderEm arFrameWordSpase animate-on-scroll an"  id="b">Виртуальная  и    <em class="arFrameTextExeption modernTecHeadHeader modernTecHeadHeaderMein">дополнительная</em></header>
@@ -285,19 +285,19 @@
                         <header class="portfolioSmallHeader" id="portfolioSmallHeader">Недавние проекты</header>
                         <div class="portfolioFotoBlock">
                             <div class="portfolioFotoBlock1">
-                                <img src=".fotoForProject/portfolio1.png" class="fotoStyle"  id = "foto1" alt="">
-                                <img src=".fotoForProject/portfolio3.png"  id = "foto3"class="textHide fotoStyle" alt="">
+                                <img src="fotoForProject/portfolio1.png" class="fotoStyle"  id = "foto1" alt="">
+                                <img src="fotoForProject/portfolio3.png"  id = "foto3"class="textHide fotoStyle" alt="">
                                 <p class="portfolioFotoText imageHide" id="interior2">Интерьер</p>
                             </div>
                             <div class="portfolioFotoBlock2 imageHide">
-                                <img src=".fotoForProject/portfolio2.png" class="fotoStyle" id = "foto2" alt="">
-                                <img src=".fotoForProject/portfolio3.png"class="fotoStyle" id = "foto33" alt="">
+                                <img src="fotoForProject/portfolio2.png" class="fotoStyle" id = "foto2" alt="">
+                                <img src="fotoForProject/portfolio3.png"class="fotoStyle" id = "foto33" alt="">
                             </div>
 
-                                <img src=".fotoForProject/portfolio4.png" id = "foto4" class="portfolioFotoBlockImage fotoStyle imageHide" alt="">
+                                <img src="fotoForProject/portfolio4.png" id = "foto4" class="portfolioFotoBlockImage fotoStyle imageHide" alt="">
 
                             <div class="portfolioNewBlock textHide" >
-                                 <img src=".fotoForProject/portfolio4.png"  id = "foto44" class="portfolioFotoBlockImage fotoStyle" alt="">
+                                 <img src="fotoForProject/portfolio4.png"  id = "foto44" class="portfolioFotoBlockImage fotoStyle" alt="">
                                 <p class="portfolioFotoText textHide" class="fotoStyle" id="interior3">Интерьер</p>
                             </div>
                                
